kyverno-policies/custom-3.1.3.yaml
../policies/kubernetes/worker-nodes/custom-3.1.3.yaml
