tests/custom-3.1.3/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.1.3-noncompliant
policies:
  - ../../../kyverno-policies/custom-3.1.3.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-1-3-kubelet-config-permissions
    rule: check-kubelet-config-permissions
    resources:
      - noncompliant-node
    kind: Node
    result: fail
